--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "server": "json-server --watch data/cities.json --port 8000 --delay 500",
     "preview": "vite preview"
   },
   "dependencies": {
